--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,11 +3,192 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mentorship Matching Platform</title>
+    <style>
+      /* Global Styles */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: "Poppins", sans-serif;
+        line-height: 1.6;
+        color: #333;
+        background-color: #f7f9fc;
+      }
+
+      a {
+        text-decoration: none;
+        color: inherit;
+      }
+
+      /* Header */
+      header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #1a73e8;
+        padding: 20px;
+        color: white;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+      }
+
+      header h1 {
+        font-size: 2rem;
+        font-weight: bold;
+      }
+
+      nav ul {
+        display: flex;
+        list-style: none;
+        gap: 15px;
+      }
+
+      nav ul li a {
+        padding: 10px 20px;
+        background-color: #3b83f6;
+        border-radius: 20px;
+        font-weight: bold;
+        color: white;
+        transition: transform 0.2s, background-color 0.3s ease-in-out;
+      }
+
+      nav ul li a:hover {
+        background-color: #1859c8;
+        transform: translateY(-2px);
+      }
+
+      /* Hero Section */
+      .hero {
+        background: linear-gradient(to right, #4a90e2, #1a73e8);
+        color: white;
+        text-align: center;
+        padding: 80px 20px;
+        border-radius: 0 0 50px 50px;
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+      }
+
+      .hero h2 {
+        font-size: 3rem;
+        margin-bottom: 20px;
+        font-weight: bold;
+      }
+
+      .hero p {
+        font-size: 1.4rem;
+        margin-bottom: 30px;
+      }
+
+      .hero .cta {
+        display: inline-block;
+        padding: 15px 40px;
+        font-size: 1.1rem;
+        font-weight: bold;
+        color: white;
+        background-color: #1859c8;
+        border-radius: 25px;
+        box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
+        transition: all 0.3s ease;
+      }
+
+      .hero .cta:hover {
+        background-color: #123f96;
+        transform: scale(1.05);
+      }
+
+      /* Features Section */
+      .features {
+        text-align: center;
+        padding: 50px 20px;
+        background-color: white;
+        border-radius: 25px;
+        margin: 30px auto;
+        width: 90%;
+        max-width: 1200px;
+        box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
+      }
+
+      .features h2 {
+        font-size: 2.5rem;
+        margin-bottom: 40px;
+        color: #1a73e8;
+        font-weight: bold;
+      }
+
+      .feature-item {
+        margin: 20px 0;
+        font-size: 1.2rem;
+      }
+
+      .feature-item h3 {
+        font-size: 1.5rem;
+        color: #1859c8;
+        margin-bottom: 10px;
+        font-weight: bold;
+      }
+
+      .feature-item p {
+        color: #555;
+      }
+
+      /* Footer */
+      footer {
+        background-color: #1a73e8;
+        color: white;
+        text-align: center;
+        padding: 15px 0;
+        font-size: 1rem;
+        font-weight: bold;
+        margin-top: 30px;
+        box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
+      }
+    </style>
   </head>
   <body>
-    <div>
-      <a href="../frontend/pages/Navbar/navbar.html"></a>
+    <!-- Header -->
+    <header>
+      <h1>Mentorship Matching Platform</h1>
+      <nav>
+        <ul>
+          <li><a href="/frontend/pages/login.html">Login</a></li>
+          <li><a href="/frontend/pages/signup.html">Register</a></li>
+          <li><a href="/frontend/pages/profile.html">Profile</a></li>
+          <li><a href="/frontend/pages/discover.html">Discover</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <div class="hero">
+      <h2>Empowering Connections, Enabling Growth</h2>
+      <p>Your journey to personal and professional success starts here.</p>
+      <a href="/frontend/pages/signup.html" class="cta">Join Now</a>
     </div>
+
+    <!-- Features Section -->
+    <section class="features">
+      <h2>Why Join Us?</h2>
+      <div class="feature-item">
+        <h3>1. Personalized Mentorship</h3>
+        <p>
+          Get matched with mentors who understand your goals and aspirations.
+        </p>
+      </div>
+      <div class="feature-item">
+        <h3>2. Professional Growth</h3>
+        <p>
+          Learn from industry experts to accelerate your career development.
+        </p>
+      </div>
+      <div class="feature-item">
+        <h3>3. Seamless Experience</h3>
+        <p>
+          Enjoy an intuitive platform for effortless communication and progress
+          tracking.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
