--- a/frontend/header.html
+++ b/frontend/header.html
@@ -190,5 +190,9 @@
         </p>
       </div>
     </section>
+    <!-- Footer -->
+    <footer>
+      &copy; 2024 Mentorship Matching Platform. All rights reserved.
+    </footer>
   </body>
 </html>
