--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -86,8 +86,8 @@
 
         <label for="role">Role</label>
         <select id="role" name="role" required>
-          <option value="user">Mentor</option>
-          <option value="admin">Mentee</option>
+          <option value="Mentor">Mentor</option>
+          <option value="Mentee">Mentee</option>
         </select>
 
         <label for="bio">Bio</label>
@@ -103,6 +103,6 @@
       </form>
     </div>
 
-    <script src="signup.js"></script>
+    <script src="../js/signup.js"></script>
   </body>
 </html>
