--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -94,7 +94,7 @@
       </form>
     </div>
 
-    <script src="/frontend/js/login.js"></script>
-    <script src="/frontend/js/loadComponents.js"></script>
+    <script src="../js/login.js"></script>
+    <!-- <script src="/frontend/js/loadComponents.js"></script> -->
   </body>
 </html>
