--- a/frontend/index.html
+++ b/frontend/index.html
@@ -152,10 +152,10 @@
       <h1>Mentorship Matching Platform</h1>
       <nav>
         <ul>
-          <li><a href="/frontend/pages/login.html">Login</a></li>
-          <li><a href="/frontend/pages/signup.html">Register</a></li>
-          <li><a href="/frontend/pages/profile.html">Profile</a></li>
-          <li><a href="/frontend/pages/discover.html">Discover</a></li>
+          <li><a href="../frontend/pages/login.html">Login</a></li>
+          <li><a href="../frontend/pages/signup.html">Register</a></li>
+          <li><a href="../frontend/pages/profile.html">Profile</a></li>
+          <li><a href="../frontend/pages/discover.html">Discover</a></li>
         </ul>
       </nav>
     </header>
